--- a/src/main/resources/resources/lang/labels_ru.properties
+++ b/src/main/resources/resources/lang/labels_ru.properties
@@ -1,6 +1,6 @@
 firstname=Здравствуйте! Пожалуйста, введите Ваше имя:
 lastname=Пожалуйста, введите Вашу фамилию:
-beginTest=Вы увидите вопросы с предлагаемыми ответами. Вы должны написать ответ в консоль. Как минимум {0} ответа должны быть правильными\nТест по английскому начинается
+beginTest=Вы увидите вопросы с предлагаемыми ответами. Вы должны написать ответ в консоль. Как минимум {0} ответа должны быть правильными\nТест начинается
 test.passed=Поздравляем, {0} {1}! Вы успешно завершили тест.
 test.failed=К сожалению, {0} {1}, Вы не сдали тест. У Вас {2} неправильных вопроса
 test.mistakes=У Вас есть некоторые ошибки. Они приведены ниже:
